# JediKnightPlus

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README-raven.txt  README.md
assets/: CMakeLists.txt
assets/client/configs/: jkmod_highest_video.cfg
assets/client/effects/jkmod_jetpack/: ground.efx  idle.efx
assets/client/fonts/: jkmod_anewhope.tga  jkmod_charsgrid_med.tga  jkmod_ergoec.tga  jkmod_ocr_a.tga
assets/client/gfx/hud/: jkmod_arrow_left.tga  jkmod_clock_bg.tga  jkmod_jetpack_icon.tga
assets/client/gfx/hud/jkmod_keys/: alt_off.tga  alt_on.tga  attack_off.tga  attack_on.tga  back_off.tga  back_on.tga  crouch_off.tga  crouch_on.tga  forward_off.tga  (+7 more)
assets/client/gfx/menus/: jkmod_logo.tga
assets/client/gfx/mp/: f_icon_ragerec.tga  jkmod_chat_icon.tga
assets/client/models/items/: jkmod_jetpack.md3
assets/client/shaders/: jkmod_ingame.shader  jkmod_special.shader_mv
assets/client/strip/: jkmod_ingame.sp  jkmod_menus.sp
assets/client/ui/: jk2mpingame.txt  jk2mpingame_fallback.txt
assets/client/ui/jk2mp/: ingame.menu  ingame_callvote.menu  ingame_jkmod.menu  ingame_jkmod_changelog.menu  ingame_jkmod_client.menu  ingame_jkmod_dimensions.menu  ingame_jkmod_emotes.menu  ingame_jkmod_popup.menu  ingame_jkmod_servers.menu  ingame_jkmod_servers_filter.menu  ingame_jkmod_servers_find.menu  ingame_jkmod_servers_info.menu  ingame_jkmod_teleports.menu  ingame_join.menu  ingame_leave.menu  ingame_player.menu  ingame_setup_fallback.menu  ingame_setup_modoptions.menu  ingame_vote.menu  menudef.h
assets/gfx/menus/: jkmod_refresh.tga  jkmod_search.tga  jkplus_logo.tga
assets/models/players/bespin_cop/: model_b2.surf
assets/models/players/gran/: model_shooter.surf
assets/models/players/jan/: model_jedif.surf
assets/models/players/jeditrainer/: model_j3.surf  model_j4.surf
assets/models/players/reelo/: model_r3.surf
assets/models/players/stormtrooper/: model_officer.surf
assets/models/players/weequay/: model_w4.surf
assets/server/: description.txt  jkmod_calculator.html  jkmod_host.bat  jkmod_host.sh  jkmod_server.cfg  jkmod_server.cmd  ref_autolist.bat  ref_blacklist.txt  ref_forcelist.txt  ref_whitelist.txt
assets/server/config/: dimension_data.cfg  server_news.cfg  teleport_chats.cfg
assets/server/config/game_type/: default.cfg  duel.cfg
assets/server/configs/: map_cycle.cfg  random_begin.cfg  teleport_chats.cfg
assets/server/configs/game_type/: ctf.cfg  cty.cfg  default.cfg  duel.cfg  team.cfg
assets/server/maps/: ffa_bespin.ent  ffa_bespin.remap
assets/server/tools/: jkmod_cvars.html
assets/shaders/: jkmod_ingame.shader  jkmod_menus.shader
assets/strip/: jkmod_ingame.sp  jkmod_menus.sp  jkplus_ingame.sp  jkplus_menus.sp
assets/ui/: jk2mpingame.txt  jk2mpingame_fallback.txt
assets/ui/jk2mp/: ingame.menu  ingame_callvote.menu  ingame_jkmod.menu  ingame_jkmod_client.menu  ingame_jkmod_emotes.menu  ingame_jkmod_servers.menu  ingame_jkmod_servers_filter.menu  ingame_jkplus_emotes.menu  ingame_setup_fallback.menu  ingame_setup_modoptions.menu  ingame_vote.menu  menudef.h
code/: CMakeLists.txt  mv.info  mvsdk_setup.h.in
code/api/: mvapi.h
code/cgame/: CMakeLists.txt  animtable.h  cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_info.c  cg_light.c  cg_local.h  cg_main.c  cg_marks.c  cg_multiversion.c  cg_multiversion.h  cg_multiversion_syscalls.c  cg_multiversion_syscalls.h  cg_newDraw.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_saga.c  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_syscalls.asm  cg_syscalls.c  cg_turret.c  cg_view.c  cg_weaponinit.c  cg_weapons.c  tr_types.h
code/game/: CMakeLists.txt  ai_main.c  ai_main.h  ai_util.c  ai_wpnav.c  animMappingTable.c  anims.h  bg_lib.c  bg_lib.h  bg_local.h  bg_misc.c  bg_multiversion.c  bg_multiversion.h  bg_panimate.c  bg_pmove.c  bg_public.h  bg_saber.c  bg_slidemove.c  bg_weapons.c  bg_weapons.h  g_active.c  g_arenas.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_items.c  g_local.h  g_main.c  g_mem.c  g_misc.c  g_missile.c  g_mover.c  g_multiversion.c  g_multiversion.h  g_multiversion_syscalls.c  g_multiversion_syscalls.h  g_object.c  g_public.h  g_saga.c  (+17 more)
code/jkplus/: jkplus_active.c  jkplus_client.c  jkplus_cmds.c  jkplus_combat.c  jkplus_common.c  jkplus_emotes.c  jkplus_local.h  jkplus_main.c
code/qcommon/: game_version.h
code/ui/: CMakeLists.txt  menudef.h  ui_atoms.c  ui_force.c  ui_force.h  ui_gameinfo.c  ui_local.h  ui_main.c  ui_multiversion.c  ui_multiversion.h  ui_multiversion_syscalls.c  ui_multiversion_syscalls.h  ui_players.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.asm  ui_syscalls.c
docs/: cmds.md  cvars.md  maps.md  setup.md
jkmod/cgame/: jk_cg_consolecmds.c  jk_cg_draw.c  jk_cg_local.h  jk_cg_main.c  jk_cg_players.c
jkmod/game/: jk_active.c  jk_bot.c  jk_client.c  jk_cmds.c  jk_common.c  jk_dimensions.c  jk_emotes.c  jk_local.h  jk_main.c  jk_misc.c  jk_public.h  jk_session.c  jk_spawn.c  jk_svcmds.c  jk_trigger.c  jk_utils.c  jk_version.h
jkmod/ui/: jk_ui_atoms.c  jk_ui_local.h  jk_ui_main.c
jkplus/cgame/: jk_cg_dimensions.c  jk_cg_draw.c  jk_cg_local.h  jk_cg_main.c  jk_cg_players.c  jk_local.h  jk_main.c  jkplus_local.h  jkplus_main.c
jkplus/game/: jk_active.c  jk_bot.c  jk_client.c  jk_cmds.c  jk_common.c  jk_dimensions.c  jk_emotes.c  jk_local.h  jk_main.c  jk_misc.c  jk_public.h  jk_session.c  jk_spawn.c  jk_svcmds.c  jk_trigger.c  jk_utils.c  jk_version.h  jkplus_active.c  jkplus_client.c  jkplus_cmds.c  jkplus_combat.c  jkplus_common.c  jkplus_emotes.c  jkplus_local.h  jkplus_main.c  jkplus_svcmds.c
jkplus/ui/: jk_atoms.c  jk_local.h  jk_main.c  jk_ui_atoms.c  jk_ui_local.h  jk_ui_main.c  jkplus_local.h  jkplus_main.c
launcher/: README.md  jkplus_launcher.cpp  jkplus_launcher.h  jkplus_launcher.rc
tools/: CMakeLists.txt
tools/asm/: CMakeLists.txt  cmdlib.c  q3asm.c
tools/cpp/: CMakeLists.txt  lex.c  macro.c  unix.c
tools/lcc/: CMakeLists.txt  bytecode.c
tools/qcommon/: q_platform.h
tools/rcc/: CMakeLists.txt  dag.c  dagcheck.c  expr.c  gen.c  stmt.c
(+21 files in other folders)
